--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -12,8 +12,8 @@
 
   <div class="row">
     <div class="col-md-12">
-      <h2>Entity Relationship Diagram</h2>
-      <p>Below is the Entity Relationship Digram that showcases how the data is structured for the Pokédex!</p>
+      <h2 class="text-secondary">Entity Relationship Diagram</h2>
+      <p class="lead">Below is the Entity Relationship Digram that showcases how the data is structured for the Pokédex!</p>
       <img src="<%= asset_path('pokemon_data_project_ERD.drawio.png') %>" class="img-fluid rounded shadow w-75" alt="Entity Relationship Diagram showcasing pokemon data.">
     </div>
   </div>
