Created the pokemons_controller with index and show actions. Created and styled list of all pokemon in the pokemons view.

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,8 +5,6 @@
            class="img-fluid hero-logo">
   </div>
 
-
-
   <div class="row">
     <h2 class="text-primary text-white">Here you can explore information on the original 151 Pokémon from the Kanto region.</h2>
   </div>
@@ -18,7 +16,7 @@
         <div class="card-body">
           <h3 class="card-title">View 151 Pokémon</h3>
           <p class="card-text">Browse through a list of the original 151 Pokémon from the Kanto Region!</p>
-          <%= link_to "Browse Pokédex", "#", class: "btn btn-primary" %>
+          <%= link_to "Browse Pokédex", pokemons_path, class: "btn btn-primary" %>
         </div>
       </div>
     </div>
