Changed the links to the pokemon show action on the pokemon index action to be strictly the images and pokemon names instead of the entire card. Added styling for a hover effect on the cards. updated the header fonts on the pokemon index action view.

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -10,3 +10,14 @@
 .pokedex-header {
   font-family: 'Bangers', sans-serif !important
 }
+
+.pokemon-card {
+  transition: transform 0.3s ease-in-out !important;
+
+}
+
+.pokemon-card:hover {
+  transform: scale(1.05) !important;
+  background-color: rgba(255, 255, 255, 0.1) !important;
+  box-shadow: 0 8px 16px rgba(255, 255, 255, 0.2) !important;
+}
