--- a/app/views/pokemons/show.html.erb
+++ b/app/views/pokemons/show.html.erb
@@ -1,2 +1,32 @@
-<h1>Pokemons#show</h1>
-<p>Find me in app/views/pokemons/show.html.erb</p>
+<div class="container bg-dark rounded-3 shadow-lg mt-4 p-4">
+  <div class="row align-items-center">
+    <div class="col-sm-6 text-center">
+      <h1 class="text-light pokemon-name"><%= @pokemon.name.capitalize %></h1>
+      <img src="<%= @pokemon.sprite_url %>" class="img-fluid shadow-lg w-75" alt="<%= @pokemon.name.capitalize %>">
+
+      <div class="mt-3">
+        <h4 class="text-light pokemon-name">Type</h4>
+        <% @pokemon.types.each do |type| %>
+          <span class="badge bg-primary fs-5 px-3 py-2 pokemon-name"><%= type.name.capitalize %></span>
+        <% end %>
+      </div>
+    </div>
+
+    <div class="col-sm-6 text-center">
+      <p class="text-light fs-3 fw-bold pokemon-name">Moves:</p>
+      <div class="d-flex flex-wrap justify-content-center">
+        <% @pokemon.moves.each do |move| %>
+          <span class="badge bg-secondary fs-3 px-3 py-2 m-1 pokemon-name"><%= move.name %></span>
+        <% end %>
+      </div>
+
+      <p class="text-light fs-3 fw-bold pokemon-name mt-5">Abilities</p>
+      <div class="d-flex flex-column align-items-center">
+        <% @pokemon.abilities.each do |ability| %>
+          <div class="card bg-secondary text-light p-3 mb-3 text-wrap w-100">
+            <p class="fs-3 m-0 pokemon-name"><%= ability.name.capitalize %></p>
+            <p class="fs-6 text-light"><%= ability.description %></p>
+          </div>
+        <% end %>
+      </div>
+  </div>
